--- a/Beranda.html
+++ b/Beranda.html
@@ -68,10 +68,9 @@
     <footer>
         <p>&copy; 2025 Tugas Progdas | Semua harus cobain.</p>
     </footer>
-
-    <button id="scrollTopBtn" title="Scroll to top"><i class="fa-solid fa-circle-up"></i></button>
-
+    <button id="scrollTopBtn"><i class="fa-solid fa-circle-up"></i></button>
     <script src="script.js"></script>
 </body>
 </html>
+
 
